move process helper function into pgrest

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "test": "env PATH=\"./node_modules/.bin:$PATH\" mocha",
-    "prepublish": "env PATH=\"./node_modules/.bin:$PATH\" lsc -cj package.ls &&\nln -sf ../../plv8x/bundled_modules/{util,events} node_modules/sequelize/node_modules/"
+    "prepublish": "env PATH=\"./node_modules/.bin:$PATH\" lsc -cj package.ls &&\nlsc -bc -o lib src &&\nln -sf ../../plv8x/bundled_modules/{util,events} node_modules/sequelize/node_modules/"
   },
   "engines": {
     "node": "*"
