--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_script:
   - "psql -c 'create database test' -U postgres"
 
 script:
-  - "TESTDBNAME=test ./node_modules/.bin/mocha test"
+  - "TESTDBNAME=test npm run test"
 
 notifications:
   email:
