move server into pgrest executable

--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "description": "enable REST in postgres",
   "version": "0.0.1",
   "main": "lib/index.js",
+  "bin": {
+    "pgrest": "bin/cmd.js"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/clkao/pgrest.git"
   },
   "scripts": {
     "test": "ln -sf ../../plv8x/bundled_modules/util node_modules/sequelize/node_modules/ &&\nln -sf ../../plv8x/bundled_modules/events node_modules/sequelize/node_modules/ &&\nenv PATH=\"./node_modules/.bin:$PATH\" mocha",
-    "prepublish": "env PATH=\"./node_modules/.bin:$PATH\" lsc -cj package.ls &&\nenv PATH=\"./node_modules/.bin:$PATH\" lsc -bc -o lib src"
+    "prepublish": "env PATH=\"./node_modules/.bin:$PATH\" lsc -cj package.ls &&\nenv PATH=\"./node_modules/.bin:$PATH\" lsc -bc bin\nenv PATH=\"./node_modules/.bin:$PATH\" lsc -bc -o lib src"
   },
   "engines": {
     "node": "*"
@@ -28,7 +31,8 @@
   "devDependencies": {
     "mocha": "*",
     "chai": "*",
-    "LiveScript": "1.1.1"
+    "LiveScript": "1.1.1",
+    "express": "3.1.x"
   },
   "optionalDependencies": {}
 }
