enable cors for now

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mocha": "*",
     "chai": "*",
     "LiveScript": "1.1.1",
-    "express": "3.1.x"
+    "express": "3.1.x",
+    "cors": "0.0.4"
   },
   "optionalDependencies": {}
 }
