--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "chai": "*",
     "LiveScript": "1.1.1",
     "express": "3.1.x",
-    "cors": "0.0.4"
+    "cors": "0.0.4",
+    "gzippo": "0.2.x"
   },
   "optionalDependencies": {}
 }
