* Generic JSON routing helper with lots of DWIMs

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "optimist": "0.3.x",
+    "trycatch": "*",
     "plv8x": "git://github.com/clkao/plv8x.git",
     "sequelize": "git://github.com/clkao/sequelize.git"
   },
