--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git://github.com/clkao/pgrest.git"
   },
   "scripts": {
-    "test": "ln -sf ../../plv8x/bundled_modules/util node_modules/sequelize/node_modules/ &&\nln -sf ../../plv8x/bundled_modules/events node_modules/sequelize/node_modules/ &&\nenv PATH=\"./node_modules/.bin:$PATH\" mocha",
+    "test": "env PATH=\"./node_modules/.bin:$PATH\" mocha",
     "prepublish": "env PATH=\"./node_modules/.bin:$PATH\" lsc -cj package.ls &&\nenv PATH=\"./node_modules/.bin:$PATH\" lsc -bc bin &&\nenv PATH=\"./node_modules/.bin:$PATH\" lsc -bc -o lib src"
   },
   "engines": {
@@ -26,8 +26,7 @@
   "dependencies": {
     "optimist": "0.3.x",
     "trycatch": "*",
-    "plv8x": "git://github.com/clkao/plv8x.git",
-    "sequelize": "git://github.com/clkao/sequelize.git"
+    "plv8x": "git://github.com/clkao/plv8x.git"
   },
   "devDependencies": {
     "mocha": "*",
