--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "LiveScript": "1.1.1",
     "express": "3.1.x",
     "cors": "0.0.4",
-    "gzippo": "0.2.x"
+    "gzippo": "0.2.x",
+    "connect-csv": "*"
   },
   "optionalDependencies": {}
 }
