use plv8x from npm

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "optimist": "0.3.x",
     "trycatch": "*",
-    "plv8x": "git://github.com/clkao/plv8x.git"
+    "plv8x": "0.3.x"
   },
   "devDependencies": {
     "mocha": "*",
