--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "optimist": "0.3.x",
     "trycatch": "*",
-    "plv8x": "0.3.x"
+    "plv8x": ">=0.3.5"
   },
   "devDependencies": {
     "mocha": "*",
