--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "email": "clkao@clkao.org"
   },
   "name": "pgrest",
-  "description": "enable REST in postgres",
-  "version": "0.0.1",
+  "description": "Enable REST in PostgreSQL",
+  "version": "0.0.2",
   "main": "lib/index.js",
   "bin": {
     "pgrest": "bin/cmd.js"
@@ -26,16 +26,16 @@
   "dependencies": {
     "optimist": "0.3.x",
     "trycatch": "*",
-    "plv8x": ">=0.3.5"
-  },
-  "devDependencies": {
-    "mocha": "*",
-    "chai": "*",
-    "LiveScript": "1.1.1",
+    "plv8x": "0.3.x",
     "express": "3.1.x",
     "cors": "0.0.x",
     "gzippo": "0.2.x",
     "connect-csv": "*"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "chai": "*",
+    "LiveScript": "1.1.1"
   },
   "optionalDependencies": {}
 }
