Revert "* express/cors/gzippo are not dev-dependencies, they really are dependencies"
This reverts commit e8ce8e20be8ce3f7fc08ad1d463a531e4093e241.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "email": "clkao@clkao.org"
   },
   "name": "pgrest",
-  "description": "Enable REST in PostgreSQL",
-  "version": "0.0.2",
+  "description": "enable REST in postgres",
+  "version": "0.0.1",
   "main": "lib/index.js",
   "bin": {
     "pgrest": "bin/cmd.js"
@@ -26,16 +26,16 @@
   "dependencies": {
     "optimist": "0.3.x",
     "trycatch": "*",
-    "plv8x": "0.3.x",
-    "express": "3.1.x",
-    "cors": "0.0.x",
-    "gzippo": "0.2.x",
-    "connect-csv": "*"
+    "plv8x": ">=0.3.5"
   },
   "devDependencies": {
     "mocha": "*",
     "chai": "*",
-    "LiveScript": "1.1.1"
+    "LiveScript": "1.1.1",
+    "express": "3.1.x",
+    "cors": "0.0.x",
+    "gzippo": "0.2.x",
+    "connect-csv": "*"
   },
   "optionalDependencies": {}
 }
