--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ before_script:
   - "sudo pip install pgxnclient"
   - "sudo apt-get install libv8-dev"
   - "sudo pgxn install plv8"
+  - "git clone https://bitbucket.org/adunstan/json_91.git"
   - "cd json_91; sudo make all install; cd .."
   - "createdb -U postgres test"
 
