add passport auth layer.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "plv8x": "0.5.x",
     "express": "3.1.x",
     "cors": "0.0.x",
-    "connect-csv": "*"
+    "connect-csv": "*",
+    "passport": "*",
+    "passport-facebook": "*",
+    "passport-twitter": "*",
+    "passport-google-oauth": "*"
   },
   "devDependencies": {
     "mocha": "*",
