--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "version": "0.0.7",
   "main": "lib/index.js",
   "bin": {
-    "pgrest": "bin/cmd.js"
+    "pgrest": "bin/cmd.ls"
   },
   "repository": {
     "type": "git",
