--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "url": "git://github.com/clkao/pgrest.git"
   },
   "scripts": {
-    "test": "env PATH=\"./node_modules/.bin:$PATH\" mocha",
-    "prepublish": "env PATH=\"./node_modules/.bin:$PATH\" lsc -cj package.ls &&\nenv PATH=\"./node_modules/.bin:$PATH\" lsc -bc bin &&\nchmod 755 bin/cmd.js &&\nenv PATH=\"./node_modules/.bin:$PATH\" lsc -bc -o lib src",
-    "postinstall": "env PATH=\"./node_modules/.bin:$PATH\" lsc -cj package.ls &&\nenv PATH=\"./node_modules/.bin:$PATH\" lsc -bc bin &&\nchmod 755 bin/cmd.js &&\nenv PATH=\"./node_modules/.bin:$PATH\" lsc -bc -o lib src"
+    "test": "mocha",
+    "prepublish": "lsc -cj package.ls &&\nlsc -bc bin &&\nchmod 755 bin/cmd.js &&\nlsc -bc -o lib src",
+    "postinstall": "lsc -cj package.ls &&\nlsc -bc bin &&\nchmod 755 bin/cmd.js &&\nlsc -bc -o lib src"
   },
   "engines": {
     "node": "*"
