--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "passport-facebook": "*",
     "passport-twitter": "*",
     "passport-google-oauth": "*",
-    "LiveScript": "1.1.1"
+    "LiveScript": "1.1.1",
+    "winston": "~0.7.2"
   },
   "devDependencies": {
     "mocha": "*",
