--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "version": "0.0.7",
   "main": "lib/index.js",
   "bin": {
-    "pgrest": "bin/cmd.ls"
+    "pgrest": "bin/cmd.js"
   },
   "repository": {
     "type": "git",
@@ -18,27 +18,26 @@
   },
   "scripts": {
     "test": "mocha",
-    "prepublish": "lsc -cj package.ls &&\nlsc -bc bin &&\nchmod 755 bin/cmd.js &&\nlsc -bc -o lib src",
-    "postinstall": "lsc -cj package.ls &&\nlsc -bc bin &&\nchmod 755 bin/cmd.js &&\nlsc -bc -o lib src"
+    "prepublish": "lsc -cj package.ls &&\nlsc -bpc bin/cmd.ls > bin/cmd.js &&\nchmod 755 bin/cmd.js &&\nlsc -bc -o lib src"
   },
   "engines": {
     "node": "*"
   },
   "dependencies": {
-    "optimist": "0.3.x",
+    "optimist": "0.6.x",
     "trycatch": "0.2.4",
-    "plv8x": "0.5.x",
+    "plv8x": "0.6.x",
     "express": "3.1.x",
     "cors": "0.0.x",
     "connect-csv": "*",
-    "LiveScript": "1.1.1",
     "winston": "~0.7.2",
     "async": "0.2.x"
   },
   "devDependencies": {
     "mocha": "*",
     "supertest": "0.7.x",
-    "chai": "*"
+    "chai": "*",
+    "LiveScript": "1.1.x"
   },
   "optionalDependencies": {
     "passport": "0.1.x",
