--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "name": "pgrest",
   "description": "enable REST in postgres",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "main": "lib/index.js",
   "bin": {
     "pgrest": "bin/cmd.js"
@@ -25,10 +25,10 @@
   },
   "dependencies": {
     "optimist": "0.6.x",
-    "trycatch": "0.2.4",
+    "trycatch": "1.0.x",
     "plv8x": "0.6.x",
-    "express": "3.1.x",
-    "cors": "0.0.x",
+    "express": "3.4.x",
+    "cors": "2.1.x",
     "connect-csv": "*",
     "winston": "~0.7.2",
     "async": "0.2.x"
