express as peerDep so pgrest-passport can have it

--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "optimist": "0.6.x",
     "trycatch": "1.0.x",
     "plv8x": "0.6.x",
-    "express": "3.4.x",
     "cors": "2.1.x",
     "connect-csv": "*",
     "winston": "~0.7.2",
@@ -35,7 +34,11 @@
     "socket.io": "*",
     "socket.io-client": "*"
   },
+  "peerDependencies": {
+    "express": "3.4.x"
+  },
   "devDependencies": {
+    "express": "3.4.x",
     "mocha": "*",
     "supertest": "0.7.x",
     "chai": "*",
