workaround installing from git

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "scripts": {
     "test": "mocha",
-    "prepublish": "lsc -cj package.ls &&\nlsc -bc -o lib src"
+    "prepublish": "lsc -cj package.ls &&\nlsc -bc -o lib src",
+    "postinstall": "if [ ! -e ./lib ]; then lsc -bc -o lib src; fi"
   },
   "engines": {
     "node": "*"
