--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
   },
   "devDependencies": {
     "express": "3.4.x",
-    "mocha": "*",
+    "mocha": "1.14.x",
     "supertest": "0.7.x",
-    "chai": "*",
+    "chai": "1.8.x",
     "LiveScript": "1.2.x"
   }
 }
