--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "optimist": "0.6.x",
+    "commander": "2.2.0",
     "trycatch": "1.0.x",
     "plv8x": ">= 0.6.3",
     "cors": "2.1.x",
